--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,8 @@
 <%- include("partials/header") %>
 <h1>Compose</h1>
-
-<input type="text" name="" placeholder="Type Here" />
-<button type="submit">Publish</button>
+<form action="/compose" method="post">
+  <input type="text" name="postTitle" placeholder="Type Here" />
+  <button type="submit">Publish</button>
+</form>
 
 <%- include("partials/footer") %>
