--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 <h1>home</h1>
 <p><%= startingContent %></p>
-<% for (var i=0; i<posts.length; i++){%>
-<% console.log(posts[i].title)%>
-<%  } %>
+<% posts.forEach(post => {%>
+<% console.log(post.title)%>
+<%  }); %>
 <%- include("partials/footer") %>
