--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,7 @@
 <h1>home</h1>
 <p><%= startingContent %></p>
 <% posts.forEach(post => {%>
-<% console.log(post.title)%>
+    <h1><%= post.title %></h1>
+    <p><%= post.content %></p>
 <%  }); %>
 <%- include("partials/footer") %>
